package Data;

public class PRepository {
    DataBase DataRepo;

    private PRepository(DataBase dataRepo){
        //
    }
    private void showAllProduct(DataBase dataRepo){
        //
    }
    private void addProduct(Product product){
        //
    }
    private void deleteProduct(Product product){
        //
    }
    private void newPrice(Product product, long num){
        //
    }
}
