package Logic.Interface;

import Data.Product;

public interface FindProduct {
   Product Find(Product product);
}
